// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders 1`] = `
<div
  className="sc-fgiXzq dScjhy"
>
  <div
    className="sc-ifyiBu jmIPFq"
  >
    <div
      className="sc-gcFSfr iEztEO"
    >
      <div
        className="sc-dTbhCw kdxatJ"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-ddkEoM iVoBwq"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-gVIfzB ekrdhZ"
  />
</div>
`;

exports[`Banner renders in mobile mode 1`] = `
<div
  className="sc-fgiXzq injXep"
>
  <div
    className="sc-ifyiBu jmIPFq"
  >
    <div
      className="sc-gcFSfr iEztEO"
    >
      <div
        className="sc-dTbhCw kdxatJ"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-ddkEoM iVoBwq"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-gVIfzB ekrdhZ"
  >
    <span>
      <button
        className="sc-hyLtxb ixOjbU"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-hruBXm cPBWwz"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-hyLtxb chDyMb"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-hruBXm cPBWwz"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders in single line mode 1`] = `
<div
  className="sc-fgiXzq dScjhy"
>
  <div
    className="sc-ifyiBu bqttJP"
  >
    <div
      className="sc-ddkEoM hwwGM"
    >
      Your email is not verified. Verify to enable withdrawals.
    </div>
    <div
      className="sc-gVIfzB ekrdhZ"
    >
      <button
        className="sc-hyLtxb bSpOsL"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Resend verification link to email ›
        <div
          className="sc-hruBXm cPBWwz"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Banner renders with buttons 1`] = `
<div
  className="sc-fgiXzq eUzRYE"
>
  <div
    className="sc-ifyiBu jmIPFq"
  >
    <div
      className="sc-gcFSfr iEztEO"
    >
      <div
        className="sc-dTbhCw kdxatJ"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-ddkEoM iVoBwq"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-gVIfzB ekrdhZ"
  >
    <span>
      <button
        className="sc-hyLtxb ixOjbU"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-hruBXm cPBWwz"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-hyLtxb chDyMb"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-hruBXm cPBWwz"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders with buttons RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="sc-fgiXzq eUzRYE"
  >
    <div
      className="sc-ifyiBu jmIPFq"
    >
      <div
        className="sc-gcFSfr iEztEO"
      >
        <div
          className="sc-dTbhCw kdxatJ"
        >
          Title here
        </div>
      </div>
      <div
        className="sc-ddkEoM iVoBwq"
      >
        Lorem ipsum dolor...
      </div>
    </div>
    <div
      className="sc-gVIfzB ekrdhZ"
    >
      <span>
        <button
          className="sc-hyLtxb ixOjbU"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Discard
          <div
            className="sc-hruBXm cPBWwz"
          />
        </button>
      </span>
      <span>
        <button
          className="sc-hyLtxb chDyMb"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Confirm
          <div
            className="sc-hruBXm cPBWwz"
          />
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Banner renders with header icon 1`] = `
<div
  className="sc-fgiXzq dScjhy"
>
  <div
    className="sc-ifyiBu jmIPFq"
  >
    <div
      className="sc-gcFSfr iEztEO"
    >
      <div
        className="sc-dTbhCw kdxatJ"
      >
        Title here
      </div>
      <div
        className="sc-ePycix eQdUJc"
      >
        <svg
          className="sc-lbxAil"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
    <div
      className="sc-ddkEoM iVoBwq"
    >
      Lorem ipsum dolor...
    </div>
  </div>
</div>
`;
